fixed contrast errors

--- a/lesson6/css/styles.css
+++ b/lesson6/css/styles.css
@@ -101,7 +101,7 @@ color: black;
 padding-left: 60px;
 }
 
-h1, h2, h3, h4{
+ h3, h4{
 font-family: 'Courgette', cursive;
 text-align: center;
 color: black;
@@ -113,7 +113,7 @@ padding-top: 30px;
   left: 16px;
   background-repeat: no-repeat;
 }
-  header, footer {
+  header, footer, h1 {
     text-align: center;
     color: White;
     background-color: #284B63;
